<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_baseline_storefront_24"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_setting" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>