<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.example.vietis.activities.Home.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" >
        <action
            android:id="@+id/action_navigation_store_to_navigation_order"
            app:destination="@id/navigation_order" />
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.vietis.activities.Home.ui.dashboard.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_navigation_setting_to_navigation_notifications2"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vietis.activities.Home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_store"
            app:destination="@id/navigation_store" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.vietis.activities.Home.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" >
        <action
            android:id="@+id/action_navigation_order_to_navigation_setting"
            app:destination="@id/navigation_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.vietis.activities.Home.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>