<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearShopItem"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_marginStart="30dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewShopIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewShopName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_name"
                    android:textColor="@color/colorPurple"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewShopAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_address"
                    android:textSize="12dp" />

                <RatingBar
                    android:id="@+id/ratingBarShopRating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:numStars="5"
                    android:progressTint="@color/colorGold"
                    android:rating="3.5"
                    android:stepSize="0.5" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewVoucher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/solid_border"
                        android:paddingHorizontal="5dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/shop_voucher"
                        android:textColor="@color/colorVoucher" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/setting_bg"
        android:layout_gravity="center" />

</LinearLayout>